<resources>
    <string name="app_name">Smart Heater</string>
    <string name="start_button">Start</string>
    <string name="how_button">How To Use</string>
    <string name="about_button">About Us</string>
    <string name="about_us_pragraph">The Smart Heater app serves people to easily control the heater and saves a lot of electricity and time </string>
    <string name="instraction1_text">1- Press Start .</string>
    <string name="instraction2_text">2- Sign in with your username and password .</string>
    <string name="instraction3_text"> 3- Connect using the smart heater Wi_Fi .</string>
    <string name="instraction4_text"> 3- Choose the type of system that works for you .</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_text">Enter your username and password</string>
    <string name="username_text">username</string>
    <string name="password_text">password</string>
    <string name="not_member">Not a member? Sign up</string>
    <string name="forget_password">Forget Password?</string>
    <string name="reset">Reset</string>
    <string name="enter_email">Enter your Email</string>
    <string name="email_text">Email@gmail.com</string>
    <string name="ok_button">ok</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="password_paragraph"> Your password must be : </string>
    <string name="connection">Connection</string>
    <string name="start_connection">Start Connection</string>
    <string name="connection_wifi">Connection To Wi-Fi</string>
    <string name="system_type">System Type</string>
    <string name="type_system">Choose the type of System </string>
    <string name="automatic">AUTOMATIC </string>
    <string name="manual">MANUAL</string>
    <string name="control">Control</string>
    <string name="manual_control">Manual control settings</string>
    <string name="set_temp">Temperature of the room</string>
    <string name="repeat_scheduled">Time Scheduling</string>
    <string name="Schedule">Schedule</string>
    <string name="turn_on_off">Turn on or off</string>
    <string name="turned_on">The heater is turned on</string>
    <string name="turned_off">The heater is turned off</string>
    <string name="set_max_temp">Set Max Temperature</string>
    <string name="repeat">Repeat</string>
    <string name="hours">hour/s</string>
    <string name="min">min</string>
    <string name="save">Save</string>
    <string name="pass_inst0">Your password must be : </string>
    <string name="pass_inst1">- At least 6 characters long </string>
    <string name="pass_inst2">- Must contain letters</string>
    <string name="pass_inst3">- Numbers and special characters </string>
    <string name="pass_inst4">- Cannot contain whitespaces </string>
    <string name="auto_system_massege_on">The automatic system \nhas been activated</string>
    <string name="auto_system_massege_off">The automatic system \nhas been inactive</string>
    <string name="manual_system_massege">The manual system has \nbeen activated</string>
    <string name="error_message">"Please check the heater connection"</string>
    <string name="notifications">Notifications</string>
    <string name="share">Share</string>
    <string name="time">Time</string>
    <string name="value30">- -</string>
    <string name="security_question">What is the name of your best teacher?</string>
    <string name="security_question_edit_view">security question</string>
    <string name="answer_security_question">Answer the security question</string>
    <string name="password_recovery">Password Recovery</string>

</resources>