<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <include
        layout="@layout/custom_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />

    <EditText
        style="@style/editTextStyle"
        android:hint="@string/username_text"
        android:textSize="18sp"
        android:id="@+id/user_name_edit_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/user_email_edit_view"
        android:inputType="text"
        app:layout_constraintVertical_chainStyle="packed"
        android:autofillHints="username"
   />
    <EditText
        style="@style/editTextStyle"
        android:hint="@string/email_text"
        android:textSize="18sp"
        android:id="@+id/user_email_edit_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name_edit_view"
        app:layout_constraintBottom_toTopOf="@id/password_edit_view"
        android:inputType="textEmailAddress"
        android:autofillHints="email"/>

    <EditText
        style="@style/editTextStyle"
        android:hint="@string/password_text"
        android:textSize="18sp"
        android:id="@+id/password_edit_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_email_edit_view"
        app:layout_constraintBottom_toTopOf="@id/security_question"
        android:inputType="textPassword"
        android:autofillHints="password"/>

    <EditText
        style="@style/editTextStyle"
        android:hint="@string/security_question"
        android:id="@+id/security_question"
        android:textSize="14sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edit_view"
        app:layout_constraintBottom_toTopOf="@id/inst0"
        android:inputType="text"
        android:autofillHints="security question"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_inst0"
        android:id="@+id/inst0"
        app:layout_constraintStart_toStartOf="@id/user_email_edit_view"
        app:layout_constraintTop_toBottomOf="@id/security_question"
        app:layout_constraintBottom_toTopOf="@id/inst1"
        android:textSize="14sp"
        android:layout_marginTop="16dp"

      />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_inst1"
        android:id="@+id/inst1"
        app:layout_constraintStart_toStartOf="@id/inst0"
        app:layout_constraintTop_toBottomOf="@id/inst0"
        app:layout_constraintBottom_toTopOf="@id/inst2"
        android:textSize="12sp"

         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_inst2"
        android:id="@+id/inst2"
       app:layout_constraintStart_toStartOf="@id/inst1"
        app:layout_constraintTop_toBottomOf="@id/inst1"
        app:layout_constraintBottom_toTopOf="@id/inst3"
        android:textSize="12sp"

         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_inst3"
        android:id="@+id/inst3"
        app:layout_constraintStart_toStartOf="@id/inst2"
        app:layout_constraintTop_toBottomOf="@id/inst2"
        app:layout_constraintBottom_toTopOf="@id/inst4"
        android:textSize="12sp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_inst4"
        android:id="@+id/inst4"
        app:layout_constraintStart_toStartOf="@id/inst3"
        app:layout_constraintTop_toBottomOf="@id/inst3"
        app:layout_constraintBottom_toTopOf="@id/sign_up_buttom"
        android:textSize="12sp"

       />

    <Button
        android:id="@+id/sign_up_buttom"
        android:text="@string/Sign_Up"
        style="@style/buttonStyle1"
        android:textColor="@color/redColor"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inst4"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        android:onClick="addUser"

        />
    <include
        layout="@layout/home_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>