<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">
    <include
        layout="@layout/custom_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_text"
        android:id="@+id/enter_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/user_email_edit_view"
        android:textSize="20sp"
        android:paddingBottom="26dp"
        app:layout_constraintVertical_chainStyle="packed"
        />
    <EditText
        style="@style/editTextStyle"
        android:hint="@string/email_text"
        android:id="@+id/user_email_edit_view"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_text"
        app:layout_constraintBottom_toTopOf="@id/password_edit_view"
        android:inputType="text"
        android:autofillHints="email"

        />
    <EditText
        style="@style/editTextStyle"
        android:hint="@string/password_text"
        android:textSize="18sp"
        android:id="@+id/password_edit_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_email_edit_view"
        app:layout_constraintBottom_toTopOf="@id/sign_in_button"
        android:inputType="textPassword"
        android:autofillHints="password"
        />
    <Button
        android:id="@+id/sign_in_button"
        android:text="@string/sign_in"
        style="@style/buttonStyle1"
        android:textColor="@color/redColor"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edit_view"
        app:layout_constraintBottom_toTopOf="@id/not_a_member_text_view"
        android:layout_marginTop="16dp"
        android:onClick="signIn"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/not_a_member_text_view"
        android:text="@string/not_member"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/user_email_edit_view"
        android:autoLink="all"
        android:onClick="openSignUp"
        android:paddingTop="16dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button"
        app:layout_constraintEnd_toEndOf="@id/user_email_edit_view"
        app:layout_constraintLeft_toRightOf="@+id/not_a_member_text_view"
        android:autoLink="all"
        android:onClick="openReset"
        android:paddingTop="16dp"
        />
    <include
        layout="@layout/home_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>