<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Control"
    android:fillViewport="true"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <include
        layout="@layout/custom_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />

    <TextView

        android:id="@+id/manul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manual_control"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/set"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="36dp"
        />

    <TextView
        android:id="@+id/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_temp"
        android:textColor="@color/redColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/repeat_scheduled_button"
        app:layout_constraintTop_toBottomOf="@id/manul"
        app:layout_constraintBottom_toTopOf="@id/temp_value"
        android:layout_margin="14dp"
        />

    <TextView
        android:id="@+id/temp_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value30"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/set"
        app:layout_constraintBottom_toTopOf="@id/repeat_scheduled_button"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/repeat_scheduled_button"
        android:textColor="@color/redColor"
        android:text="@string/repeat_scheduled"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temp_value"
        app:layout_constraintBottom_toTopOf="@id/turn_on_off"
        android:paddingRight="120dp"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
        android:onClick="openRepeatScheduled"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/turn_on_off"
        android:text="@string/turn_on_off"
        android:textColor="@color/redColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/repeat_scheduled_button"
        app:layout_constraintTop_toBottomOf="@id/repeat_scheduled_button"
        app:layout_constraintBottom_toTopOf="@id/powre_icone"
        android:layout_margin="14dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/turned_on_text_view"
        android:text="@string/turned_on"
        android:textColor="@color/greyColor"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/turn_on_off"
        app:layout_constraintBottom_toTopOf="@id/powre_icone"
        android:visibility="gone"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/turned_off_text_view"
        android:text="@string/turned_off"
        android:textColor="@color/greyColor"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/turn_on_off"
        app:layout_constraintBottom_toTopOf="@id/powre_icone"
        android:visibility="gone"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/error_text_view"
        android:text="@string/error_message"
        android:textColor="@color/redColor"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/turn_on_off"
        app:layout_constraintBottom_toTopOf="@id/powre_icone"
        android:visibility="gone"
        />
    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/powre_icone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/turned_on_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/power"
        />


    <include
        layout="@layout/home_button"
        />
    <include
        layout="@layout/exit_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
