<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HowToUse">
    <include
        layout="@layout/custom_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />

    <TextView
        android:id="@+id/How_To_Use_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inst1"
        android:textSize="26sp"
        android:textStyle="bold"
        android:padding="40dp"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <TextView
        android:id="@+id/inst1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instraction1_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/How_To_Use_title"
        app:layout_constraintBottom_toTopOf="@id/inst2"
        android:textSize="19sp"
        android:padding="30dp"
        />

    <TextView
        android:id="@+id/inst2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instraction2_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inst1"
        app:layout_constraintBottom_toTopOf="@id/inst4"
        android:textSize="19sp"
        android:padding="30dp"
        />

<TextView
    android:id="@+id/inst4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/instraction4_text"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@id/inst2"
    app:layout_constraintBottom_toBottomOf="parent"
    android:textSize="19sp"
    android:padding="30dp"
    />

    <include
        layout="@layout/home_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>