<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reset">

    <include
        layout="@layout/custom_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_email"
        android:id="@+id/enter_email"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/user_email_edit_view"
        android:textSize="20sp"
        android:paddingBottom="26dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/user_email_edit_view"
        />

    <EditText
        style="@style/editTextStyle"
        android:hint="@string/email_text"
        android:textSize="18sp"
        android:id="@+id/user_email_edit_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_email"
        app:layout_constraintBottom_toTopOf="@id/security_question"
        android:inputType="textEmailAddress"
        android:autofillHints="email"
        />

    <EditText
        style="@style/editTextStyle"
        android:hint="@string/answer_security_question"
        android:textSize="18sp"
        android:id="@+id/security_question"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_email_edit_view"
        app:layout_constraintBottom_toTopOf="@id/ok_button"
        android:inputType="text"
        android:autofillHints="security question"
        />

    <Button
        android:id="@+id/ok_button"
        android:text="@string/ok_button"
        style="@style/buttonStyle1"
        android:textColor="@color/redColor"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/security_question"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        android:onClick="recover"
        />
    <include
        layout="@layout/home_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>